--- a/src/main/webapp/resources/core/css/style.css
+++ b/src/main/webapp/resources/core/css/style.css
@@ -21,6 +21,25 @@ p {
   color: #666;
 }
 
+/*.avatar-image {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+
+.avatar-overlay {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}*/
+
+
 h1 {
   font-size: 35px;
 }
@@ -1313,7 +1332,7 @@ ul.pagination .active a {
 }
 
 .arrow-left {
-  left: -15 px;
+  left: -15px;
 }
 
 .product-item {
