--- a/src/main/webapp/resources/core/css/style.css
+++ b/src/main/webapp/resources/core/css/style.css
@@ -4,6 +4,14 @@ body {
   font-family: "Muli", sans-serif;
 }
 
+.header-card h5{
+  float: left;
+}
+
+.header-card img{
+  position: relative;
+}
+
 p, li, input, select, button {
   font-family: "Muli", sans-serif;
   color: #666;
