for each a cada card funcion ok

--- a/src/main/webapp/resources/core/css/style.css
+++ b/src/main/webapp/resources/core/css/style.css
@@ -645,6 +645,12 @@ ul.pagination .active a {
   background: #5672f9;
 }
 
+.bg-5 {
+  background: url(../images/home/bg-5.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .navigation {
   padding: 20px 0;
 }
