--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -16,7 +16,7 @@
     <link th:href="@{/plugins/nerd-fonts/css/nerd-fonts.css}" rel="stylesheet">
     <link th:href="@{/plugins/bootstrap/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/plugins/bootstrap/bootstrap-slider.css}" rel="stylesheet">
-<!--    <link th:href="@{/plugins/font-awesome/css/font-awesome.min.css}" rel="stylesheet">-->
+    <!--    <link th:href="@{/plugins/font-awesome/css/font-awesome.min.css}" rel="stylesheet">-->
     <link th:href="@{/plugins/slick/slick.css}" rel="stylesheet">
     <link th:href="@{/plugins/slick/slick-theme.css}" rel="stylesheet">
     <link th:href="@{/plugins/jquery-nice-select/css/nice-select.css}" rel="stylesheet">
@@ -73,7 +73,7 @@
     </div>
 </header>
 
-<section class="hero-area bg-1 text-center overly">
+<section class="hero-area bg-5 text-center overly">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -198,30 +198,35 @@
                 <div class="section-title">
                     <h2>Ultimos Destinos</h2>
                     <p>Estos Usuarios están buscando el compañero ideal que les cebe unos mates</p>
+                    <p></p>
                 </div>
             </div>
         </div>
 
+
         <div class="row">
             <div class="col-lg-12">
                 <div class="trending-ads-slide">
-                    <div class="col-sm-12 col-lg-4">
 
+                    <div class="col-sm-12 col-lg-4" th:each="viaje : ${ultimosViajes}">
                         <div class="col-sm-12 col-lg-4">
                             <div class="card" style="width: 18rem;">
-                                <div style="background-image: url('images/products/jujuy_web.jpg'); height: 200px;"></div>
+                                <div th:style="'background-image: url(' + ${viaje.background} + '); height: 200px;'"></div>
                                 <div class="card-body">
                                     <div class="header-card">
-                                        <img src="images/team/team1.jpg" alt="avatar"
-                                             width="55x" height="55px" class="rounded-circle">
+                                        <img th:src="${viaje.avatar}" alt="avatar" width="55px" height="55px"
+                                             class="rounded-circle">
                                     </div>
-                                    <div><h5 class="card-title">Mariano Ochoa</h5></div>
-                                    <div><p class="card-text">Fecha de Salida: 25/02/2024</p></div>
+                                    <div><h5 class="card-title" th:text="${viaje.nombre}"></h5></div>
+                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${viaje.fechaViaje}"></p>
+                                    </div>
 
                                 </div>
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><i class="fa-solid fa-signs-post"></i> Origen: San Justo, Buenos Aires</li>
-                                    <li class="list-group-item"><i class="fa-solid fa-flag-checkered"></i> Destino: Pumamarca Jujuy</li>
+                                    <li class="list-group-item"><i class="fa-solid fa-signs-post"></i> Origen: <span
+                                            th:text="${viaje.origen}"></span></li>
+                                    <li class="list-group-item"><i class="fa-solid fa-flag-checkered"></i> Destino:
+                                        <span th:text="${viaje.destino}"></span></li>
                                     <li class="list-group-item">**ICONOS**</li>
                                 </ul>
                                 <div class="card-body">
@@ -230,101 +235,9 @@
                                 </div>
                             </div>
                         </div>
-
-                    </div>
-                    <div class="col-sm-12 col-lg-4">
-
-                        <div class="col-sm-12 col-lg-4">
-                            <div class="card" style="width: 18rem;">
-                                <div style="background-image: url('images/products/marDelPlata_web.jpg'); height: 200px;"></div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Rocio Lagos</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                </ul>
-                                <div class="card-body">
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-sm-12 col-lg-4">
-
-                        <div class="col-sm-12 col-lg-4">
-                            <div class="card" style="width: 18rem;">
-                                <div style="background-image: url('images/products/misiones_web.jpg'); height: 200px;"></div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Matias Chamorro</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                </ul>
-                                <div class="card-body">
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
 
-                    <div class="col-sm-12 col-lg-4">
 
-                        <div class="col-sm-12 col-lg-4">
-                            <div class="card" style="width: 18rem;">
-                                <div style="background-image: url('images/products/rioNegro_web.jpg'); height: 200px;"></div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Martin Zambucetti</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                </ul>
-                                <div class="card-body">
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-sm-12 col-lg-4">
-
-                        <div class="col-sm-12 col-lg-4">
-                            <div class="card" style="width: 18rem;">
-                                <div style="background-image: url('images/products/santacruz_web.jpg'); height: 200px;"></div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Olivia Gonzales</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                </ul>
-                                <div class="card-body">
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
 
                 </div>
             </div>
@@ -338,7 +251,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-title">
-                    <h2>Todos los viajes</h2>
+                    <h2>Viajes Cerca Tuyo</h2>
                 </div>
 
 
