--- a/src/main/webapp/resources/core/css/style.css
+++ b/src/main/webapp/resources/core/css/style.css
@@ -651,6 +651,12 @@ ul.pagination .active a {
   background-size: cover;
 }
 
+.bg-login{
+  background: url(../images/fondo-login.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .navigation {
   padding: 20px 0;
 }
