--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -63,7 +63,7 @@
                         </ul>
                         <ul class="navbar-nav ml-auto mt-10">
                             <li class="nav-item">
-                                <a class="nav-link login-button" th:href="@{/login2}">Login</a>
+                                <a class="nav-link login-button" th:href="@{/login}">Login</a>
                             </li>
                         </ul>
                     </div>
