--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -218,7 +218,7 @@
                                              class="rounded-circle">
                                     </div>
                                     <div><h5 class="card-title" th:text="${viaje.nombre}"></h5></div>
-                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${viaje.fechaViaje}"></p>
+                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${#dates.format(viaje.fechaViaje, 'dd/MM/yyyy')}"></p>
                                     </div>
 
                                 </div>
