se agrega test de repositorio y servicio para Usuario, perfil.html(falta pulir) y controlador de perfil

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -236,7 +236,7 @@
                                 </ul>
                                 <div class="card-body">
                                     <a href="#" class="card-link">Mas Info</a>
-                                    <a href="#" class="card-link">Ver Perfil</a>
+                                    <a th:href="@{/perfil/usuario(email='marianoochoa@unlam.edu.ar')}" class="card-link">Ver Perfil</a>
                                 </div>
                             </div>
                         </div>
