Se sube: Crear Viaje (Controller, vista y boton en Home) revisar porque no guarda. Se agrega relacion Viaje/Usuario.

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -66,6 +66,11 @@
                                 <a class="nav-link login-button" th:href="@{/login}">Login</a>
                             </li>
                         </ul>
+                        <ul class="navbar-nav ml-auto mt-10">
+                            <li>
+                                <a class="nav-link bg-danger p-3" th:href="@{/crear-viaje}">Crear Viaje</a>
+                            </li>
+                        </ul>
                     </div>
                 </nav>
             </div>
