--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -130,9 +130,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="trending-ads-slide">
-                    <div class="col-sm-12 col-lg-4">
+                    <div class="col-sm-12 col-lg-4" th:each="item : ${provincias}">
                         <div class="product-item bg-light">
-                            <div class="card" th:each="item : ${provincias}">
+                            <div class="card">
                                 <div class="thumb-content">
                                     <a href="#">
                                         <img class="card-img-top img-fluid" th:src="${item.imagen}"
@@ -145,68 +145,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="col-sm-12 col-lg-4">
-                        <div class="product-item bg-light">
-                            <div class="card">
 
-
-                                <div class="thumb-content">
-                                    <a href="#">
-                                        <img class="card-img-top img-fluid" src="images/products/san-rafael.jpg"
-                                             alt="Card image cap">
-                                    </a>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title"><a href="#">Mendoza</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-4">
-                        <div class="product-item bg-light">
-                            <div class="card">
-                                <div class="thumb-content">
-                                    <a href="#">
-                                        <img class="card-img-top img-fluid" src="images/products/cordoba.jpg"
-                                             alt="Card image cap">
-                                    </a>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title"><a href="#">Córdoba</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-4">
-                        <div class="product-item bg-light">
-                            <div class="card">
-                                <div class="thumb-content">
-                                    <a href="#">
-                                        <img class="card-img-top img-fluid" src="images/products/neuquen.jpg"
-                                             alt="Card image cap">
-                                    </a>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title"><a href="#">Neuquén</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-4">
-                        <div class="product-item bg-light">
-                            <div class="card">
-                                <div class="thumb-content">
-                                    <a href="#">
-                                        <img class="card-img-top img-fluid" src="images/products/salta.jpg"
-                                             alt="Card image cap">
-                                    </a>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title"><a href="#">Salta</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
                 </div>
             </div>
         </div>
