--- a/src/main/webapp/WEB-INF/views/thymeleaf/login2.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login2.html
@@ -63,7 +63,7 @@
                             <button type="submit" class="btn btn-lg btn-primary font-weight-bold mt-3">Ingresar</button>
 
                             <a class="mt-3 d-block text-primary" href="#!">Olvidaste tu contraseña?</a>
-                            <a class="mt-3 d-inline-block text-primary" href="register.html">Registrarse</a>
+                            <a class="mt-3 d-inline-block text-primary" href="nuevo-usuario.html">Registrarse</a>
                         </fieldset>
                     </form>
                 </div>
