--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -196,7 +196,7 @@
                                     </li>
                                 </ul>
                                 <div class="card-body">
-                                    <a th:href="@{/ver-viaje(id='2')}" class="card-link">Mas Info</a>
+                                    <a th:href="@{/ver-viaje(id=${viaje.id})}" class="card-link">Mas Info</a>
                                     <a th:href="@{/perfil/usuario(email='marianoochoa@unlam.edu.ar')}" class="card-link">Ver Perfil</a>
                                 </div>
                             </div>
