--- a/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
@@ -49,11 +49,19 @@
                 <div style="margin-top:50px;" class="border mb-30 ms-0  ">
                     <h3 class="bg-gray p-4">Crear Nuevo Viaje</h3>
                     <form class="p-3" action="#" th:action="@{/creacion}" th:object="${viaje}" method="POST">
-                        <label class="" for="origen">Origen:</label>
-                        <input type="text" id="origen" name="origen" th:field="*{origen}" />
+                        <label >
+                        <select name="origen.id" th:field="${viaje.origen.id}" >
+                            <option value="">-- Selecciona una ciudad de Origen --</option>
+                            <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre}+ ','+${ciudad.provincia.nombre}"></option>
+                        </select>
+                        </label>
                         <br>
-                        <label for="destino">Destino:</label>
-                        <input type="text" id="destino" name="destino" th:field="*{destino}" />
+                        <label >
+                            <select name="destino.id" th:field="${viaje.destino.id}" >
+                                <option value="">-- Selecciona una ciudad de Destino --</option>
+                                <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre}+ ','+${ciudad.provincia.nombre}"></option>
+                            </select>
+                        </label>
                         <br>
                         <label for="fecha_hora">Fecha y Hora:</label>
                         <input type="datetime-local" id="fecha_hora" name="fecha_hora" th:field="*{fecha_hora}" />
