--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -179,15 +179,16 @@
                                              class="rounded-circle">
                                     </div>
                                     <div><h5 class="card-title" th:text="${viaje.usuario.nombre}"></h5></div>
-                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${#dates.format( viaje.fecha_hora, 'dd/MM/yyyy')}"></p>
+                                    <!--TODO ver el tema del formato de la fecha, ya que salta error porque es String-->
+                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${viaje.fecha_hora}"></p>
                                     </div>
 
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item"><i class="fa-solid fa-signs-post fa-xl"></i> Origen: <span
-                                            th:text="${viaje.origen}"></span></li>
+                                            th:text="${viaje.origen.nombre + ', '+ viaje.origen.provincia.nombre}"></span></li>
                                     <li class="list-group-item"><i class="fa-solid fa-flag-checkered fa-xl"></i> Destino:
-                                        <span th:text="${viaje.destino}"></span></li>
+                                        <span th:text="${viaje.destino.nombre + ', '+ viaje.destino.provincia.nombre}"></span></li>
                                     <li class="list-group-item">
                                         <i class="fa-solid fa-paw fa-lg"></i>
                                         <i class="fa-solid fa-ban-smoking fa-lg"></i>
