--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -5,6 +5,7 @@
   <title>viaje seleccionado</title>
 </head>
 <body>
-  <span th:text="${'Viaje: ' + viaje.destino + ' ' + viaje.origen}"></span>
+  <span th:text="${'Viaje: ' + viaje.destino.nombre+', '+viaje.destino.provincia.nombre + ' - '
+                              + viaje.origen.nombre + ', '+viaje.origen.provincia.nombre}"></span>
 </body>
 </html>
