Funcionalidad de Ver Mis Viajes agregadaç

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -60,6 +60,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="nuevo-usuario">Perfil</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/mis-viajes}">Mis Viajes</a>
+                            </li>
                         </ul>
                         <ul class="navbar-nav ml-auto mt-10">
                             <li class="nav-item">
