--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -96,7 +96,7 @@
                                         <select id="origen" name="origen">
                                             <option value="">-- Seleccione Origen --</option>
                                             <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
-                                        </select>     placeholder="Origen">
+                                        </select>
                                         </div>
                                         <div class="form-group col-lg-3 col-md-6">
                                             <label for="destino">Destino:</label>
@@ -147,7 +147,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="card-title"><a href="#" th:text="${item.nombre}"></a></h4>
+                                    <h4 class="card-title"><a th:href="@{/listar-provincia(provincia = ${item.nombre})}" th:value="${item.nombre.toString()}" th:text="${item.nombre}"></a></h4>
                                 </div>
                             </div>
                         </div>
@@ -213,9 +213,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
                 </div>
             </div>
         </div>
