arreglo la el link de la imagen en provincias populares

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -141,9 +141,8 @@
                         <div class="product-item bg-light">
                             <div class="card">
                                 <div class="thumb-content">
-                                    <a href="#">
-                                        <img class="card-img-top img-fluid" style="min-width: 100%" th:src="${item.imagen}"
-                                             alt="Imagen provincia">
+                                    <a th:href="@{/listar-provincia(provincia = ${item.nombre})}" th:value="${item.nombre.toString()}">
+                                        <img class="card-img-top img-fluid" style="min-width: 100%" th:src="${item.imagen}" alt="Imagen provincia">
                                     </a>
                                 </div>
                                 <div class="card-body">
