--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -52,8 +52,8 @@
       <div class="card card-margin flex-row">
         <div class="col-lg-3 userInfo">
           <div>
-            <img th:src="${'../../../../resources/core/images/avatars/av-3.jpg'}" alt="avatar" width="5px" height="5px" class="rounded-circle">
-            <h5 th:text="${viaje.destino}" class="card-title"></h5>
+            <img th:src="@{/images/avatars/av-3.jpg}" alt="avatar" width="50px" height="50px" class="rounded-circle">
+            <h5 th:text="${viaje.destino.nombre}" class="card-title"></h5>
           </div>
           <div>
             <a th:href="@{/perfil/usuario(email='marianoochoa@unlam.edu.ar')}" class="card-link">Ver Perfil</a>
@@ -69,8 +69,8 @@
                     <span class="widget-49-date-month">abril</span>
                   </div>
                   <div class="widget-49-meeting-info">
-                    <span class="widget-49-pro-title">Rosario</span>
-                    <span class="widget-49-meeting-time">Santa Fe</span>
+                    <span class="widget-49-pro-title" th:text="${viaje.destino.nombre}"></span>
+                    <span class="widget-49-meeting-time" th:text="${viaje.destino.provincia.nombre}"></span>
                   </div>
                 </div>
                 <div class="widget-49-title-wrapper">
@@ -79,8 +79,8 @@
                     <span class="widget-49-date-month">mayo</span>
                   </div>
                   <div class="widget-49-meeting-info">
-                    <span class="widget-49-pro-title">Rosario</span>
-                    <span class="widget-49-meeting-time">Santa Fe</span>
+                    <span class="widget-49-pro-title" th:text="${viaje.origen.nombre}"></span>
+                    <span class="widget-49-meeting-time" th:text="${viaje.origen.provincia.nombre}"></span>
                   </div>
                 </div>
                 <div class="widget-49-title-wrapper">
