--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -58,10 +58,7 @@
                                 <a class="nav-link" href="home">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="nuevo-usuario">Perfil</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" th:href="@{/mis-viajes}">Mis Viajes</a>
+                                <a class="nav-link card-link" th:href="@{/perfil/mi-perfil}">Mi Perfil</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav ml-auto mt-10">
@@ -211,7 +208,7 @@
                                 </ul>
                                 <div class="card-body">
                                     <a th:href="@{/ver-viaje(id=${viaje.id})}" class="card-link">Mas Info</a>
-                                    <a th:href="@{/perfil/usuario(email= ${viaje.usuario.email})}" class="card-link">Ver Perfil</a>
+                                    <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}" class="card-link">Ver Perfil</a>
                                 </div>
                             </div>
                         </div>
