--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -52,11 +52,11 @@
       <div class="card card-margin flex-row">
         <div class="col-lg-3 userInfo">
           <div>
-            <img th:src="@{/images/avatars/av-3.jpg}" alt="avatar" width="50px" height="50px" class="rounded-circle">
+            <img th:src="${viaje.usuario.avatar}" alt="avatar" width="5px" height="50px" class="rounded-circle">
             <h5 th:text="${viaje.destino.nombre}" class="card-title"></h5>
           </div>
           <div>
-            <a th:href="@{/perfil/usuario(email='marianoochoa@unlam.edu.ar')}" class="card-link">Ver Perfil</a>
+            <a th:href="@{/perfil/usuario(idUsuario=${viaje.usuario.id})}" class="card-link">Ver Perfil</a>
           </div>
         </div>
         <div class=" col-lg-9 d-block paddingNone">
