--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -1,48 +1,88 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <title>Taller Web I</title>
-
-  <!-- Boostrap core css -->
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-
-  <!-- custom style -->
-  <link rel="stylesheet" th:href="@{/css/main.css}"/>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario de Registro</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link th:href="@{css/registro.css}" rel="stylesheet">
 </head>
-
-<body>
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
-
-<main role="main" class="container">
-
-  <div class = "container">
-    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-      <form action="#" th:action="@{/registrarme}" method="POST" th:object="${usuario}">
-        <h3 class="form-signin-heading">Nuevo Usuario</h3>
-        <hr class="colorgraph"><br>
-
-        <input th:field="*{email}" id="email" class="form-control" required/>
-        <input th:field="*{password}" type="password" id="password" class="form-control" required/>
-
-        <button id="btn-registrarme" class="btn btn-lg btn-primary btn-block" Type="Submit">Registrarme</button>
-        <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
-        </p>
-      </form>
-
+<body class="container-body">
+<header class="header">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-light navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto main-nav ">
+              <li class="nav-item @@home">
+                <a class="nav-link login-button" th:href="@{/home}">Home</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
   </div>
+</header>
+<div class="container mt-2">
+  <div class="row justify-content-center">
+    <div class="col-md-6 cont-registro align-item-center">
+      <h3 class="p-4">Nuevo usuario</h3>
+      <form class="p-4" th:action="@{/registrarme}" th:object="${usuario}" method="POST">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="nombre">Nombre</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Nombre" th:field="*{nombre}">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="apellido">Apellido</label>
+            <input type="text" class="form-control" id="apellido" placeholder="Apellido" th:field="*{apellido}">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email" placeholder="Email" th:field="*{email}">
+        </div>
+        <div class="form-group">
+          <label for="password">Contraseña</label>
+          <input type="password" class="form-control" id="password" placeholder="Contraseña" th:field="*{password}">
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="fechaNacimiento">Fecha de Nacimiento</label>
+            <input type="date" class="form-control" id="fechaNacimiento"  th:field="*{fecha_nac}">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="dni">DNI</label>
+            <input type="text" class="form-control" id="dni" placeholder="Dni"  th:field="*{dni}">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-group col-md-6">
+            <label for="codigoArea">Código de Área</label>
+            <input type="text" class="form-control" id="codigoArea" placeholder="Código de Área"  th:field="*{cod_area}">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="telefono">Teléfono</label>
+            <input type="tel" class="form-control" id="telefono" placeholder="Teléfono"  th:field="*{telefono}">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-lg btn-primary font-weight-bold mt-3">Registrarse</button><br>
 
-</main>
-<!-- /.container -->
+        <a class="mt-3 d-inline-block text-primary" href="login">Ya tienes una cuenta? Inicia Sesión</a>
+        <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
+      </form>
+    </div>
+  </div>
+</div>
 
-<!-- Boostrap core js -->
-<script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
